src/assets/scss/_give.scss
/* ... */
.border-bottom-small {
  @include respond-to(small) {
    border-bottom: 1px solid lighten($colorGrayscale-text, 60%);
    margin-bottom: 1.5em;
    padding-bottom: 1.5em;
  }
  @include respond-to(extrasmall) {
    border-bottom: 1px solid lighten($colorGrayscale-text, 60%);
    margin-bottom: 1.5em;
    padding-bottom: 1.5em;
  }

  @include clearfix;
}

.border-top-small {
  border-top: 1px solid lighten($colorGrayscale-text, 60%);
  margin-top: 1.5em;
  padding-top: 1.5em;

  @include clearfix;
}

.title-margin {
  margin: 1.5em 0;
  @include respond-to(small) {
    margin: .75em auto;
  }
  @include respond-to(extrasmall) {
    margin: .75em auto;
  }
}

.sign-in-leadin {
  font-size: 18px;
  line-height: 135%;
  max-width: 265px;
  text-align: center;
  margin: 1em auto;
}

.radio-method,
.radio-custom-amount {
  label {
    font-weight: normal;
  }
  .expiring {
    text-indent: 60px;
    font-size: 1em;
    line-height: 1em;
    color: red;
  }
  img {
    margin-right: $gutter*.5;
    display: inline-block;
    vertical-align: middle;
  }
  input[type="radio"] {
    display: inline-block;
    float: none;
    margin: 0;
    margin-right: $gutter*.5;
    position: static;
    vertical-align: 0%;
  }
}

.btn-xs,
.btn-sm {
  font-size: .85rem;
  font-weight: 700;
}

.table-payment-history {
  thead {
    th {
      font-weight: 500;
      font-size: 16px;
      text-transform: uppercase;
    }
  }
  tbody {
    td {
      min-height: 75px;
      height: 75px;
      vertical-align: middle !important;
      label {
        margin-bottom: 0;
      }
      .radio-method {
        label {
          float: left;
          strong {
            font-weight: 500;
          }
        }
      }
      &.status-pending {
        color: red;
      }
      &.amount {
      }
    }
  }
}

.table-striped-dark > tbody > tr:nth-child(odd) {
  background: lighten($colorGrayscale-stone, 5%);
}


.modal-meta{
  color: lighten($colorGrayscale-text, 40%);
  margin-bottom: $gutter*.25;
  display: block;
  line-height: 1.15em;
}

.repeating-row {
	clear: both;
	line-height: 1em;
	&:before,
	&:after {
		content: "";
		display: block;
		clear: both;
	}
	.recipient-image {
		max-width: 100px;
	}
	.recipient-name {
		margin-bottom: $gutter*.25;
    margin-top: $gutter*.15;
	}
	.checkbox-right {
		text-align: right;
		label {
			text-align: right;
			padding: 0;
			font-weight: normal;
		}
		input[type=checkbox], input[type=radio] {
			margin-left: $gutter*.25;
		}
	}
}

@media screen and (min-width: 550px ) and (max-width: 991px ) {
  .split-row {
    width: 100%;
    margin-top: $gutter*0.5;

    .split-col-left, .split-col-right {
      width: 45%;
      margin-top: 0 !important;
      margin-bottom: 0 !important;
    }

    .split-col-left {
      float: left;
    }

    .split-col-right {
      float: right;
    }
  }
}

.row-no-spacing {
  > [class*="col-"] {
    padding-left: 0 !important;
    padding-right: 0 !important;
  }
}

.inline-form-group {
  margin-bottom: 0;
  label {
    display: block;
  }
  span.line-height {
    line-height: 44px;
  }
  input[type=text],
  input[type=number],
  input[type=email],
  input[type=password] {
    display: inline-block;
    width: 175px;
    margin-right: $gutter*.5;
  }
}

.inline-block {
  display: inline-block;
}

.recent-recipient-row {
  margin-bottom: $gutter;
}

img.full-width {
  width: 100%;
}

.list-recurring {
  margin-bottom: 0;
  h4 {
    margin-bottom: 0;
  }
  li {
    margin-bottom: .75em;
    &:last-child {
      margin-bottom: 0;
    }
  }
  .meta {
    font-size: 1em;
    line-height: 1.4em;
  }
}

.ecfa-logo {
  margin: 0;
}

.screenContent {
  padding-top: 35px !important;
  &:focus {
    outline: none;
  }
}

.screenContent-alt {
  background: $colorCru-white;
}

.panel,
.panel-body {
  p, ul {
    font-size: 100%;
  }
}

.strike {
  display: block;
  text-align: center;
  overflow: hidden;
  white-space: nowrap;

  > span {
    position: relative;
    display: inline-block;
  }

  > span:before, > span:after {
    content: "";
    position: absolute;
    top: 50%;
    width: 9999px;
    height: 1px;
    background: $colorGrayscale-rock;
  }

  > span:before {
    right: 100%;
    margin-right: 15px;
  }

  > span:after {
    left: 100%;
    margin-left: 15px;
  }
}

.text-muted {
  color: lighten($colorGrayscale-text, 40%);
}

.socialIcon {
  @media screen and (max-width: 640px) {
    padding-left: $gutter*.35;
    padding-right: $gutter*.35;
  }
}

.footer-seals {
  text-align: center;
  img, div {
    vertical-align: top;
    display: inline-block;
    max-height: 70px;
    margin: 0 $gutter*.5;
    &:focus {outline: none;}
  }
  > div {margin-top: 6px;}
}

// Responsive alignment. Based off of https://github.com/twbs/bootstrap/blob/v4.0.0-alpha.5/scss/utilities/_text.scss#L11-L19
@media (min-width: $xs + 1) {
  .text-sm-left {
    text-align: left !important;
  }
  .text-sm-right {
    text-align: right !important;
  }
  .text-sm-center {
    text-align: center !important;
  }
}

